fix top nav collapse

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -487,46 +487,11 @@ textarea {
       -ms-transform: translateY(4px);
           transform: translateY(4px); }
 
-.navbar-checkbox {
-  display: none; }
-
-.navbar {
-  position: relative;
-  top: 58px;
-  font-size: 16px;
-  min-width: 280px; }
-
-.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  float: right; }
-  .topnav li {
-    float: left;
-    margin: 0 2px; }
-    .topnav li a {
-      font-weight: "TitilliumWeb-Regular", sans-serif;
-      display: block;
-      color: #ffffff;
-      text-align: center;
-      vertical-align: middle;
-      padding: 8px 17px;
-      text-decoration: none;
-      text-transform: uppercase;
-      border-radius: 5px; }
-    .topnav li a:hover:not(.active) {
-      background-color: #643a79; }
-    .topnav li a.active {
-      background-color: #643a79; }
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 860px) {
   .navbar {
-    display: block;
-    position: relative;
     top: 50px;
     left: 50px;
-    z-index: 1;
+    z-index: 1000;
     -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
@@ -550,7 +515,7 @@ textarea {
     z-index: 2;
     -webkit-touch-callout: none; }
   .navbar span {
-    margin-left: 80%;
+    margin-left: 81%;
     top: 20px;
     display: block;
     width: 33px;
@@ -559,7 +524,6 @@ textarea {
     position: relative;
     background: #ffffff;
     border-radius: 3px;
-    z-index: 1;
     -ms-transform-origin: 4px 0px;
         transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; }
@@ -594,7 +558,8 @@ textarea {
         transform-origin: 0% 0%;
     -ms-transform: translate(-100%, 0);
         transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    z-index: 200; }
   .topnav li {
     padding: 10px 0;
     font-size: 22px; }
@@ -623,11 +588,44 @@ textarea {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.078);
     width: 82px;
+    height: 38px;
     vertical-align: middle; }
   .section-nav li a:hover:not(.active) {
     background-color: #ffffff; }
   .section-nav li a.active {
     background-color: #ffffff; }
+
+@media only screen and (min-width: 860px) {
+  .navbar-checkbox {
+    display: none; }
+  .navbar {
+    position: relative;
+    top: 58px;
+    font-size: 16px;
+    min-width: 280px; }
+  .topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    float: right; }
+    .topnav li {
+      float: left;
+      margin: 0 2px; }
+      .topnav li a {
+        font-weight: "TitilliumWeb-Regular", sans-serif;
+        display: block;
+        color: #ffffff;
+        text-align: center;
+        vertical-align: middle;
+        padding: 8px 17px;
+        text-decoration: none;
+        text-transform: uppercase;
+        border-radius: 5px; }
+      .topnav li a:hover:not(.active) {
+        background-color: #643a79; }
+      .topnav li a.active {
+        background-color: #643a79; } }
 
 .services-main-wrapper {
   background-color: #17c2a4;
